--- a/app/css/scss/_variables.scss
+++ b/app/css/scss/_variables.scss
@@ -25,3 +25,6 @@ $Color-Rainbow-Orange: #FFA500;
 $Color-Rainbow-Yellow: #FFFF00;
 $Color-Rainbow-Green: #008000;
 $Color-Rainbow-Blue: #0000FF;
+
+$CSS-slideUpDown: 800ms;  // This as well as
+$CSS-fadeInOut: 250ms;    // this need to jive with the timings in the JS
