--- a/app/css/scss/_breakpoints.scss
+++ b/app/css/scss/_breakpoints.scss
@@ -4,7 +4,7 @@
   2. Sets width of resume .artifact-image
   */
   .gallery {
-    height: 32rem;
+    height: 25rem;
     margin-left: auto;
     margin-right: auto;
   }
@@ -86,4 +86,9 @@
   #resume .content-presenter .artifact-image.right {
     width: 330px;
   }
+
+  .gallery + #guts-footer {
+    display: none;
+  }
+
 }
