--- a/app/css/scss/_guts-enhanced.scss
+++ b/app/css/scss/_guts-enhanced.scss
@@ -1,5 +1,5 @@
 #guts {
-  padding-top: 0;
+  padding-top: 0;  /* Needed to remove the css used to push #guts below the fixed header */
   text-align: center;
 }
 
@@ -11,6 +11,7 @@
   position: relative;
   max-width: 75rem;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .non-gallery {
