--- a/app/css/scss/_landing-enhanced.scss
+++ b/app/css/scss/_landing-enhanced.scss
@@ -1,3 +1,7 @@
-#entrance .color-block {
-
+#entrance {
+  .color-block {
+    width: 100%;
+    height: 30rem;
+    background-color: $Color-Light-Blue;
+  }
 }
