--- a/app/css/scss/_portfolio.scss
+++ b/app/css/scss/_portfolio.scss
@@ -30,27 +30,14 @@
   border-right: none;
 }
 
+#portfolio .portfolio-item:nth-last-child(3),
 #portfolio .portfolio-item:nth-last-child(2),
 #portfolio .portfolio-item:nth-last-child(1) {
   border-bottom: none;
 }
 
-#portfolio .portfolio-item h3,
-#portfolio .portfolio-item em {
-  @include transition(color 250ms ease-in-out);
-}
-
-#portfolio .portfolio-item:hover h3,
-#portfolio .portfolio-item:hover em {
-  color: #FFF;
-}
-
-#portfolio .portfolio-item h3 {
-  margin-bottom: 0.5rem;
-}
-
 #portfolio .portfolio-item img {
   margin: 0 auto;
-  max-width: 95%;
-  padding: 15% 0;
+  max-width: 90%;
+  padding: 12.5% 0;
 }
