--- a/app/css/scss/_breakpoints.scss
+++ b/app/css/scss/_breakpoints.scss
@@ -15,9 +15,14 @@
   }
 
   .slide {
+    margin-top: 2rem;
     position: absolute;
     padding: 0 5rem;
     width: 100%;
+  }
+
+  .slide.first {
+    margin-top: 0;
   }
 
   .gallery-control {
@@ -55,6 +60,7 @@
 
   .gallery .marquee-image {
     float: right;
+    margin-top: 2rem;
   }
 
   .gallery .gallery-title,
