--- a/app/css/scss/_about.scss
+++ b/app/css/scss/_about.scss
@@ -1,26 +1,25 @@
-.about-image {
-  img {
+#about {
+  .about-image img {
     display: block;
     margin: 0 auto;
   }
-}
-
-.about-words {
-  header {
-    margin: 1rem 0 0.5rem;
-    text-align: center;
-  }
-  p {
-    text-align: justify;
-  }
-  .about-body {
-    word-spacing: -2px;
-  }
-  .about-specialties {
-    margin-top: 1.5rem;
-  }
-  ul {
-    list-style: disc;
-    padding-left: 2.5rem;
+  .about-words {
+    .about-body {
+      word-spacing: -2px;
+    }
+    .about-specialties {
+      margin-top: 1.5rem;
+    }
+    header {
+      margin: 1rem 0 0.5rem;
+      text-align: center;
+    }
+    p {
+      text-align: justify;
+    }
+    ul {
+      list-style: disc;
+      padding-left: 2.5rem;
+    }
   }
 }
