--- a/app/css/scss/_entrance.scss
+++ b/app/css/scss/_entrance.scss
@@ -1,21 +1,18 @@
 #entrance {
-  margin: 5% auto;
-  padding: 2.5%;
-}
-
-.what-i-am {
-  text-align: center;
-  width: 14.5rem;
   margin: 0 auto;
-}
-
-.what-i-am h2 {
-  color: #CCC;
-  font-size: 1.4rem;
-  letter-spacing: -2px;
-}
-
-.what-i-am i {
-  color: $Color-Dark-Grey;
-  font-style: normal;
+  padding: 3rem;
+  .what-i-am {
+    text-align: center;
+    width: 14.5rem;
+    margin: 0 auto;
+    h2 {
+      color: #CCC;
+      font-size: 1.4rem;
+      letter-spacing: -2px;
+    }
+    i {
+      color: $Color-Dark-Grey;
+      font-style: normal;
+    }
+  }
 }
