--- a/app/css/scss/_wtf-warning.scss
+++ b/app/css/scss/_wtf-warning.scss
@@ -5,23 +5,20 @@
   height: 100%;
   width: 100%;
   z-index: 999;
-}
-
-#wtf-warning {
-  text-align: center;
-  background-color: #ccc;
-  position: fixed;
-  top: 1.5rem;
-  padding: 1.5rem;
-  left: 1rem;
-  right: 1rem;
-}
-
-#wtf-warning p {
-  margin-bottom: 1rem;
-}
-
-#wtf-warning button {
-  margin: 0 0.5rem 0.5rem;
-  padding: 0.5rem 1rem;
+  #wtf-warning {
+    text-align: center;
+    background-color: #ccc;
+    position: fixed;
+    top: 1.5rem;
+    padding: 1.5rem;
+    left: 1rem;
+    right: 1rem;
+    p {
+      margin-bottom: 1rem;
+    }
+    button {
+      margin: 0 0.5rem 0.5rem;
+      padding: 0.5rem 1rem;
+    }
+  }
 }
