--- a/app/css/scss/enhanced.scss
+++ b/app/css/scss/enhanced.scss
@@ -3,14 +3,12 @@
 @import 'variables.scss';
 @import 'base-styles-enhanced.scss';
 @import 'fonts-enhanced.scss';
-@import 'lightbox-enhanced.scss';
-@import 'wtf-warning-enhanced.scss';
 @import 'entrance-enhanced';
 @import 'navigation-enhanced.scss';
 @import 'guts-enhanced.scss';
-@import 'footer-enhanced.scss';
 @import 'about-enhanced.scss';
 @import 'portfolio-enhanced.scss';
 @import 'contact-enhanced.scss';
 @import 'gallery-template-enhanced.scss';
-@import 'breakpoints.scss';
+@import 'gallery-template-super-enhanced.scss';
+@import 'gallery-exceptions-enhanced.scss';
