--- a/app/css/scss/style.scss
+++ b/app/css/scss/style.scss
@@ -13,4 +13,5 @@
 @import 'about.scss';
 @import 'portfolio.scss';
 @import 'contact.scss';
-@import 'gallery-template.scss'
+@import 'gallery-template.scss';
+@import 'gallery-exceptions.scss';
