--- a/app/css/scss/gallery-template-super-enhanced.scss
+++ b/app/css/scss/gallery-template-super-enhanced.scss
@@ -1,4 +1,5 @@
 @media only screen and (min-width: 75rem) {
+
   .gallery {
     height: 26.5rem;
     margin-left: auto;
@@ -34,7 +35,11 @@
         margin-top: 0;
       }
     }
+    & + #guts-footer {
+      display: none;
+    }
   }
+
   .gallery-panel {
     border: none;
     margin-bottom: 0;
@@ -78,7 +83,5 @@
       margin-top: 3rem;
     }
   }
-  + #guts-footer {
-    display: none;
-  }
+
 }
