--- a/app/css/scss/_gallery-template-super-enhanced.scss
+++ b/app/css/scss/_gallery-template-super-enhanced.scss
@@ -14,6 +14,10 @@
       width: 41px;
       z-index: 99;
       @include transition(opacity 400ms ease-in-out);
+      &.is-disabled {
+        opacity: 0.3;
+        @include transition(opacity 400ms ease-in-out);
+      }
     }
     .next {
       right: 0;
@@ -21,10 +25,6 @@
     .previous {
       left: 0;
       @include transform(rotate(180deg));
-    }
-    &.is-disabled {
-      opacity: 0.3;
-      @include transition(opacity 400ms ease-in-out);
     }
     .slide {
       margin-top: 2rem;
@@ -72,6 +72,9 @@
         line-height: 1.35;
       }
     }
+    .gallery-text {
+      margin-top: 0.5rem;
+    }
     p {
       font-size: 1.1rem;
       line-height: 1.35;
@@ -81,6 +84,9 @@
     }
     &.double-push-down-text .gallery-text {
       margin-top: 3rem;
+    }
+    &.half-push-down-text .gallery-text {
+      margin-top: 1rem;
     }
   }
 
