--- a/app/css/scss/_gallery-template.scss
+++ b/app/css/scss/_gallery-template.scss
@@ -15,7 +15,7 @@
   .marquee-image {
     border: 2px solid #CCC;
     margin-bottom: 2rem;
-    padding: 10px;
+    padding: 10px 10px 7px;
   }
   .gallery-title {
     margin-bottom: -0.5rem;
@@ -39,7 +39,7 @@
     margin-bottom: 2rem;
   }
   &.border .gallery-image {
-    padding: 10px;
+    padding: 10px 10px 5px;
     border: 2px solid #CCC;
   }
   .gallery-text {
