--- a/app/css/scss/_notes.scss
+++ b/app/css/scss/_notes.scss
@@ -22,26 +22,21 @@
     compressed css, this makes finding what you're looking for, or making sense of what you're
     reading much easier. At the moment, Generic css rules are not proceeded with anything.
 
-    (TODO: However, I'm curious about the performance hit of extra IDs and classes, so, test this)
-
-    (TODO: *Consider* prefixing site wide css rules with ID/Class)
-
 4.  Use of !important is frowned upon, but at times necessary
 
 5.  All measurements are in REM or %
 
 6.  An exception to the that last rule is in measurements of very small size, e.g. border, border-
-    radius, line-spacing,
+    radius, line-spacing, etc.
 
-7.  Use data:uris instead of images whenever possible
+7.  Use data:uris on plain images (data:uris hurt on mobile)
 
-8.  Font-sizes go on the typographic elements
+8.  Use spritesheets on more complex images
 
 
 --- SCSS & CSS STYLING/FORMATTING ---
 
 
 n.  This is a living document
-
 
 */
