--- a/app/css/scss/_wtf-warning.scss
+++ b/app/css/scss/_wtf-warning.scss
@@ -11,10 +11,11 @@
   text-align: center;
   background-color: #ccc;
   position: fixed;
-  top: 1.5rem;
-  padding: 1.5rem;
+  margin: 1.5rem auto 0;
   left: 1rem;
   right: 1rem;
+  max-width: 50rem;
+  padding: 1.5rem;
   p {
     margin-bottom: 1rem;
   }
